<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context="com.carlomatulessy.issuetracker.app.AboutActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/carlo"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/about_image_carlo_desc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_summary"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/about_github_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/about_github"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/about_carlo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_carlo"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>
