<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlomatulessy.issuetracker.app.NewIssuesActivity"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/newissue_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newissue_description"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/newissue_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/newissue_description"
                android:hint="@string/newissue_hint"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/newissue_submit_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/core_button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:text="@string/newissue_submit_button"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
